WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273523
[UnifiedPDF] Highlighted text in PDF disappears momentarily when Safari is resized and zoomed
https://bugs.webkit.org/show_bug.cgi?id=273523
Summary
[UnifiedPDF] Highlighted text in PDF disappears momentarily when Safari is re...
Abrar Rahman Protyasha
Reported
2024-04-30 14:57:18 PDT
rdar://125426369
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-04-30 17:27:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27956
EWS
Comment 2
2024-05-02 08:49:32 PDT
Committed
278263@main
(0f33d68c956e): <
https://commits.webkit.org/278263@main
> Reviewed commits have been landed. Closing PR #27956 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug